99-Legacy from HV/DevelopperToolKit/02-TEST_MANAGEMENT/02-QUALITY_TEST/01 - SONARQUBE/sonarq-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sonarq-deployment
spec:
  replicas: 1
  template:
    metadata:
      name: sonarqube
      labels:
        name: sonarqube
    spec:
      containers:
        - image: registry.eu-de.bluemix.net/sonarq-namespace/sonarqube:1
          name: sonarqube-container
          ports:
            - containerPort: 9000
              name: sonarq-port
