99-Legacy from HV/DevelopperToolKit/02-TEST_MANAGEMENT/02-QUALITY_TEST/01 - SONARQUBE/sonarq-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: sonarq-service
  name: sonarq-service
spec:
  type: NodePort
  ports:
    - port: 9000
      targetPort: 9000
      name: sonarport
  selector:
    name: sonarqube
